over shadowing on mobile fixed?

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -15,7 +15,7 @@ a:hover {
 
 #loginTitle, #regTitle {
     font-size: 40px;
-    margin: -10px -10px 10px -10px;    
+    margin: -10px -10px 5% -10px;    
     text-align: center;
     font-family: Courgette, serif;
     color: aqua;
